force-app/main/default/objects/UserLoginHistory__c/UserLoginHistory__c.object-meta.xml
<CustomObject>
    <description>旅行社帳號登入紀錄</description>
    <label>User Login History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Login Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>