force-app/main/default/objects/UserLoginHistory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>密碼錯誤</fullName>
            </value>
            <value>
                <fullName>尚未開通</fullName>
            </value>
            <value>
                <fullName>密碼逾期</fullName>
            </value>
            <value>
                <fullName>登入成功</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>