force-app/main/default/objects/UserLoginHistory__c/fields/UserManagement__c.field-meta.xml
<CustomField>
    <fullName>UserManagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Management</label>
    <referenceTo>UserManagement__c</referenceTo>
    <relationshipLabel>User Login Histories</relationshipLabel>
    <relationshipName>User_Login_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>