force-app/main/default/objects/UserLoginHistory__c/fields/UserManagementTemp__c.field-meta.xml
<CustomField>
    <fullName>UserManagementTemp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Management Temp</label>
    <referenceTo>UserManagementTemp__c</referenceTo>
    <relationshipLabel>User Login Histories</relationshipLabel>
    <relationshipName>User_Login_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>